# sunshine-chain

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sunshine-bors.service  sunshine-node.service  sunshine.service
bot/: Cargo.toml
bot/src/: main.rs  subxt.rs
chains/: dev.json  staging.json
cli/: Cargo.toml
cli/src/: command.rs  error.rs  main.rs
client/: Cargo.toml
client/src/: lib.rs  light.rs
node/: Cargo.toml
node/src/: chain_spec.rs  lib.rs  main.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
