[package]
name = "sunshine-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
default = ["light"]
light = ["sunshine-client/light"]

[dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
exitfailure = "0.5.1"
clap = "3.0.0-beta.1"
dirs2 = "3.0.1"
env_logger = "0.7.1"
ipfs-embed = "0.1.1"
keybase-keystore = "0.1.0"
sled = "0.32.0"
substrate-subxt = "0.10.0"
sunshine-client = { version = "0.1.0", path = "../client" }
sunshine-identity-cli = "0.1.0"
