[package]
name = "sunshine-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
mock = [
    "env_logger",
    "jsonrpsee",
    "sp-keyring",
    "tempdir",
]

[dependencies]
async-std = "=1.5.0"
async-trait = "0.1.36"
codec = { version = "1.3.1", package = "parity-scale-codec" }
ipfs-embed = "0.1.1"
ipld-block-builder = "0.4.0"
libipld = { version = "0.3.0", default-features = false }
sc-service = { version = "0.8.0-rc4", default-features = false }
sled = "0.32.0"
sp-database = "2.0.0-rc4"
substrate-subxt = { version = "0.10.1", features = ["client"] }
substrate-keybase-keystore = "0.2.0"
sunshine-core = "0.2.0"
sunshine-faucet-client = "0.2.0"
sunshine-identity-client = "0.2.0"
sunshine-identity-utils = "0.2.0"
sunshine-node = { version = "0.1.0", path = "../node" }
thiserror = "1.0.20"

env_logger = { version = "0.7.1", optional = true }
jsonrpsee = { version = "0.1.0", optional = true }
sp-keyring = { version = "2.0.0-rc4", optional = true }
tempdir = { version = "0.3.7", optional = true }
