[package]
name = "sunshine-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
mock = [
    "sunshine-client-utils/mock",
]

[dependencies]
async-trait = "0.1.36"
ipld-block-builder = "0.4.1"
libipld = { version = "0.3.1", default-features = false }
substrate-subxt = "0.11.0"
sunshine-bounty-client = { git = "https://github.com/sunshine-protocol/sunshine-bounty.git" }
sunshine-bounty-utils = { git = "https://github.com/sunshine-protocol/sunshine-bounty.git" }
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-faucet-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
sunshine-identity-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
sunshine-node = { version = "0.1.0", path = "../node" }
