[package]
name = "sunshine-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
mock = [
    "sunshine-client-utils/mock",
]

[dependencies]
async-trait = "0.1.40"
libipld = { version = "0.6.1", default-features = false }
substrate-subxt = "0.12.0"
sunshine-bounty-client = { git = "https://github.com/sunshine-protocol/sunshine-bounty" }
sunshine-bounty-utils = { git = "https://github.com/sunshine-protocol/sunshine-bounty" }
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-faucet-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
sunshine-identity-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
sunshine-node = { version = "0.1.0", path = "../node" }
