[package]
name = "sunshine-node"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
description = "Substrate Node template"
edition = "2018"
homepage = "https://joinsunshine.com"
repository = "https://github.com/sunshine-protocol/sunshine"

[build-dependencies]
substrate-build-script-utils = "2.0.0-rc5"

[dependencies]
futures = "0.3.5"
hex-literal = "0.2.1"
log = "0.4.11"
structopt = "0.3.16"

sc-basic-authorship = "0.8.0-rc5"
sc-cli = "0.8.0-rc5"
sc-client-api = "2.0.0-rc5"
sc-client-db = { version = "0.8.0-rc5", default-features = false, features = ["with-parity-db"] }
sc-consensus = "0.8.0-rc5"
sc-consensus-aura = "0.8.0-rc5"
sc-executor = "0.8.0-rc5"
sc-finality-grandpa = "0.8.0-rc5"
sc-network = "0.8.0-rc5"
sc-service = { version = "0.8.0-rc5", default-features = false }
sc-transaction-pool = "2.0.0-rc5"
sp-core = "2.0.0-rc5"
sp-consensus = "0.8.0-rc5"
sp-consensus-aura = "0.8.0-rc5"
sp-finality-grandpa = "2.0.0-rc5"
sp-inherents = "2.0.0-rc5"
sp-runtime = "2.0.0-rc5"
sp-transaction-pool = "2.0.0-rc5"

sunshine-runtime = { version = "0.1.0", path = "../runtime" }
