[package]
name = "sunshine-node"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
description = "Substrate Node template"
edition = "2018"
homepage = "https://joinsunshine.com"
repository = "https://github.com/sunshine-protocol/sunshine"

[build-dependencies]
substrate-build-script-utils = "2.0.0"

[dependencies]
hex-literal = "0.3.1"
sc-executor = "0.8.0"
sp-core = "2.0.0"
sp-runtime = "2.0.0"
sunshine-codec = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-node-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
sunshine-runtime = { version = "0.1.0", path = "../runtime" }
# cli deps
sc-cli = "0.8.0"
sc-service = { version = "0.8.0", default-features = false }
structopt = "0.3.18"
