[package]
name = "sunshine-runtime"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
homepage = "https://joinsunshine.com"
repository = "https://github.com/sunshine-protocol/sunshine"

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", optional = true, features = ["derive"] }

frame-executive = { version = "2.0.0-rc4", default-features = false }
frame-support = { version = "2.0.0-rc4", default-features = false }
frame-system = { version = "2.0.0-rc4", default-features = false }
pallet-aura = { version = "2.0.0-rc4", default-features = false }
pallet-balances = { version = "2.0.0-rc4", default-features = false }
pallet-faucet = { version = "0.1.0", default-features = false, path = "../../sunshine-identity/faucet/pallet" }
pallet-grandpa = { version = "2.0.0-rc4", default-features = false }
pallet-identity = { version = "0.1.0", default-features = false, path = "../../sunshine-identity/identity/pallet" }
pallet-randomness-collective-flip = { version = "2.0.0-rc4", default-features = false }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false }
pallet-transaction-payment = { version = "2.0.0-rc4", default-features = false }
sp-api = { version = "2.0.0-rc4", default-features = false }
sp-block-builder = { version = "2.0.0-rc4", default-features = false }
sp-consensus-aura = { version = "0.8.0-rc4", default-features = false }
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-inherents = { version = "2.0.0-rc4", default-features = false }
sp-io = { version = "2.0.0-rc4", default-features = false }
sp-offchain = { version = "2.0.0-rc4", default-features = false }
sp-runtime = { version = "2.0.0-rc4", default-features = false }
sp-session = { version = "2.0.0-rc4", default-features = false }
sp-std = { version = "2.0.0-rc4", default-features = false }
sp-transaction-pool = { version = "2.0.0-rc4", default-features = false }
sp-version = { version = "2.0.0-rc4", default-features = false }
utils-identity = { version = "0.1.0", default-features = false, path = "../../sunshine-identity/identity/utils" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-faucet/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-randomness-collective-flip/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "utils-identity/std",
]
