[package]
name = "sunshine-runtime"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
homepage = "https://joinsunshine.com"
repository = "https://github.com/sunshine-protocol/sunshine"

[build-dependencies]
substrate-wasm-builder-runner = "1.0.6"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
serde = { version = "1.0.116", optional = true, features = ["derive"] }

frame-executive = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-aura = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
pallet-grandpa = { version = "2.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-transaction-payment = { version = "2.0.0", default-features = false }
sp-api = { version = "2.0.0", default-features = false }
sp-block-builder = { version = "2.0.0", default-features = false }
sp-consensus-aura = { version = "0.8.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-offchain = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-session = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-transaction-pool = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }
sunshine-bounty = { git = "https://github.com/sunshine-protocol/sunshine-bounty", default-features = false }
sunshine-bounty-utils = { git = "https://github.com/sunshine-protocol/sunshine-bounty", default-features = false }
sunshine-codec = { git = "https://github.com/sunshine-protocol/sunshine-core", default-features = false }
sunshine-faucet-pallet = { git = "https://github.com/sunshine-protocol/sunshine-identity", default-features = false }
sunshine-identity-pallet = { git = "https://github.com/sunshine-protocol/sunshine-identity", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-randomness-collective-flip/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sunshine-bounty/std",
    "sunshine-bounty-utils/std",
    "sunshine-codec/std",
    "sunshine-faucet-pallet/std",
    "sunshine-identity-pallet/std",
]
